--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slider": "^1.1.1",
     "modern": "^1.0.2",
     "modern-normalize": "^1.1.0",
     "react": "^18.2.0",
