--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "modern-normalize": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "styled-components": "^5.3.10"
